--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -853,18 +853,6 @@
   year={2014},
 }
 
-@article{Sampat2020,
-title = "Valuing economic impact reductions of nutrient pollution from livestock waste",
-journal = "Resources, Conservation and Recycling",
-volume = "164",
-pages = "105199",
-year = "2021",
-issn = "0921-3449",
-doi = "https://doi.org/10.1016/j.resconrec.2020.105199",
-url = "http://www.sciencedirect.com/science/article/pii/S0921344920305164",
-author = "A.M. Sampat and Andrea Hicks and Gerardo J. Ruiz-Mercado and Victor M. Zavala",
-}
-
 @incollection{Kausar19,
 author = {Sayma Samreen and Sharba Kausar},
 title = {Phosphorus Fertilizer: The Original and Commercial Sources},
@@ -1383,3 +1371,49 @@ chapter = {6},
   year={2007},
   publisher={The Iron and Steel Institute of Japan}
 }
+
+@misc{CommoditiesPrices,
+    author = {{The World Bank}},
+    title = {{Annual Prices - Commodity Markets}},
+    institution  = {{The World Bank}},
+    year = {2022},
+    howpublished = "\url{https://www.worldbank.org/en/research/commodity-markets}",
+    note = "[Online; accessed 23-August-2022]"
+    }
+
+@article{sampat2021valuing,
+  title={Valuing economic impact reductions of nutrient pollution from livestock waste},
+  author={Sampat, Apoorva M and Hicks, Andrea and Ruiz-Mercado, Gerardo J and Zavala, Victor M},
+  journal={Resources, Conservation and Recycling},
+  volume={164},
+  pages={105199},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@misc{FAO_PUses,
+    author = {{FAO \& IAEA}},
+    title = {{Use of Phosphate Rocks for Sustainable Agriculture}},
+    institution  = {{FAO Land and Water Development Division and the International Atomic Energy Agency}},
+    year = {2004},
+    howpublished = "\url{https://www.fao.org/3/y5053e/y5053e00.htm}",
+    note = "[Online; accessed 23-August-2022]"
+    }
+
+@misc{UMin_P,
+    author = {Kaiser, Daniel E. and Pagliari, Paulo},
+    title = {{Understanding phosphorus fertilizers}},
+    institution  = {{University of Minnesota Extension}},
+    year = {2018},
+    howpublished = "\url{https://extension.umn.edu/phosphorus-and-potassium/understanding-phosphorus-fertilizers#process-619211}",
+    note = "[Online; accessed 23-August-2022]"
+    }
+
+@misc{CPIIndex,
+    author = {{U.S. Census Bureu}},
+    title = {{Current versus Constant (or Real) Dollars}},
+    institution  = {{U.S. Census Bureu}},
+    year = {2021},
+    howpublished = "\url{https://www.census.gov/topics/income-poverty/income/guidance/current-vs-constant-dollars.html}",
+    note = "[Online; accessed 23-August-2022]"
+    }
