--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -436,10 +436,12 @@ Figure \ref{fig:Results_PlotSummary} shows that the food and organic waste repre
 Finally, there are some processes under development for the recovery of phosphorus from steel production industry, particularly from steelmaking slag. These processes are based on selective leaching and further chemical precipitation to obtain solid phosphates \citep{du2022recovery, du2019separation} or magnetic-aid calcium phosphate precipitation \citep{yokoyama2007separation}. Although these are promising processes that can result in an effective recovery of phosphorus which can be further recycled, they are at early development stages and, thus, they have not been considered in this assessment.
 
 \subsection{Economic implications of phosphorus recovery in Ontario}
-The scope of this study is oriented to the recycling of the phosphorus recovered and, therefore, the processes studied are those recovering phosphorus in an adequate for being further reused. The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector shown in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
+Figure ?? shows the temporal evolution of phosphorus commodities reported by the World Bank's Commodity Markets report \citep{CommoditiesPrices}, i.e., phosphate rock, diammonium phosphate (DAP), and triple superphosphate (TSP) together with the average price for the recovery of phosphorus in Ontario and the long-term social and environmental economical losses derived from the uncontrolled releases of phosphorus into the environment estimated by \citet{sampat2021valuing}. The prices of phosphorus products are referred per mass unit of phosphorus, assuming that the phosphorus content of commercial phosphorus rock ranges from 28 to 34\% in mass basis \citep{FAO_PUses, UMin_P}, while phosphorus content of DAP and TSP is 20\% and 19\% respectively.
+
+Shared costs
 
 \subsection{Implications on food sovereignty of phosphorus recovery in Ontario}
-Implications on food production self-sufficiency derived from the (partial) recycling of P. Discussion on the improvement of the food production system resiliency against disruptions of the global supply supply chains  (e.g., current context derived from the COVID-19 pandemia and the war in Ukraine)
+The scope of this study is oriented to the recycling of the phosphorus recovered and, therefore, the processes studied are those recovering phosphorus in an adequate for being further reused. The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector shown in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
 
 \subsection{Gaps of knowledge}
 Further research in phosphorus recovery systems oriented to small scale livestock facilities
