--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1405,7 +1405,7 @@ chapter = {6},
     title = {{Understanding phosphorus fertilizers}},
     institution  = {{University of Minnesota Extension}},
     year = {2018},
-    howpublished = "\url{https://extension.umn.edu/phosphorus-and-potassium/understanding-phosphorus-fertilizers#process-619211}",
+    howpublished = "\url{https://extension.umn.edu/phosphorus-and-potassium/understanding-phosphorus-fertilizers}",
     note = "[Online; accessed 23-August-2022]"
     }
 
@@ -1417,3 +1417,174 @@ chapter = {6},
     howpublished = "\url{https://www.census.gov/topics/income-poverty/income/guidance/current-vs-constant-dollars.html}",
     note = "[Online; accessed 23-August-2022]"
     }
+
+@article{galan2018time,
+  title={Time for global action: an optimised cooperative approach towards effective climate change mitigation},
+  author={Gal{\'a}n-Mart{\'i}n, A and Pozo, Carlos and Azapagic, Adisa and Grossmann, Ignacio E and Mac Dowell, Niall and Guill{\'e}n-Gos{\'a}lbez, Gonzalo},
+  journal={Energy \& Environmental Science},
+  volume={11},
+  number={3},
+  pages={572--581},
+  year={2018},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{sampat2019coordinated,
+  title={Coordinated management of organic waste and derived products},
+  author={Sampat, Apoorva M and Hu, Yicheng and Sharara, Mahmoud and Aguirre-Villegas, Horacio and Ruiz-Mercado, Gerardo and Larson, Rebecca A and Zavala, Victor M},
+  journal={Computers \& chemical engineering},
+  volume={128},
+  pages={352--363},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{reid2019phosphorus,
+  title={Phosphorus accumulation in Canadian agricultural soils over 30 yr},
+  author={Reid, Keith and Schneider, Kimberley D},
+  journal={Canadian Journal of Soil Science},
+  volume={99},
+  number={4},
+  pages={520--532},
+  year={2019},
+  publisher={Canadian Science Publishing 65 Auriga Drive, Suite 203, Ottawa, ON K2E 7W6}
+}
+
+@techreport{IROWC_PHandbook,
+    author = {van Bochove, Eric and Th{\'e}riault, Georges and Denault, Jean-Thomas},
+    title = {{Indicator of risk of water contamination by phosphorus (IROWC P): a handbook for presenting the IROWC P algorithms}},
+    institution  = {{Agriculture and Agri-Food Canada}},
+    year = {2010},
+    }
+
+@misc{FieldCropsCensus,
+    author = "{Agriculture and Agri-Food Canada}",
+    title = {{Field crops and hay, Census of Agriculture, 2011 and 2016}},
+    year = "2022",
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210041601}",
+    note = "[Online; accessed 16-December-2021]"
+  }
+
+@misc{FieldVegetablesCensus,
+    author = "{Agriculture and Agri-Food Canada}",
+    title = {{Field vegetables,, Census of Agriculture, 2011 and 2016}},
+    year = "2022",
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210041801}",
+    note = "[Online; accessed 16-December-2021]"
+  }
+
+@misc{GreenhousesCensus,
+    author = "{Agriculture and Agri-Food Canada}",
+    title = {{Greenhouse products and mushrooms,, 2011 and 2016}},
+    year = "2022",
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210042001}",
+    note = "[Online; accessed 16-December-2021]"
+  }
+
+@misc{GNFOntario,
+    author = "{Ontario Ministry of Agriculture and Food and the Ministry of Rural Affairs}",
+    title = {{Greenhouse Nutrient Feedwater Regulation}},
+    year = "2021",
+    howpublished = "\url{http://www.omafra.gov.on.ca/english/nm/regs/gnfpro/gnfreg.htm}",
+    note = "[Online; accessed 23-December-2021]"
+  }
+
+@misc{GrowingVeggiesOntario,
+    author = "{Ontario Ministry of Agriculture and Food and the Ministry of Rural Affairs}",
+    title = {{Growing Greenhouse Vegetables in Ontario}},
+    year = "2011",
+  }
+
+@misc{HorticulturalOntario,
+    author = "{Ontario Ministry of Agriculture and Food and the Ministry of Rural Affairs}",
+    title = {{Horticultural Crops}},
+    year = "2022",
+    howpublished = "\url{http://www.omafra.gov.on.ca/english/stats/hort/index.html}",
+    note = "[Online; accessed 18-December-2021]"
+  }
+
+
+@misc{GreenhouseReleases,
+    author = "{Ontario Ministry of the Environment, Conservation and Parks}",
+    title = {{Greenhouse Wastewater Monitoring Project (2010 and 2011)}},
+    year = "2012",
+    howpublished = "\url{https://www.ontario.ca/page/greenhouse-wastewater-monitoring-project-2010-and-2011}",
+    note = "[Online; accessed 22-December-2021]"
+  }
+
+@misc{GreenhouseWorkers,
+    author = "{Government of Canada}",
+    title = {{Greenhouse Worker in Ontario - Job prospects}},
+    year = "2022",
+    howpublished = "\url{https://www.jobbank.gc.ca/marketreport/outlook-occupation/23339/ON}",
+    note = "[Online; accessed 22-December-2021]"
+  }
+
+@misc{NPRI,
+    author = "{Environment and Climate Change Canada}",
+    title = {{About the National Pollutant Release Inventory}},
+    year = "2021",
+    howpublished = "\url{https://www.canada.ca/en/environment-climate-change/services/national-pollutant-release-inventory/about-national-pollutant-release-inventory.html}",
+    note = "[Online; accessed 29-December-2021]"
+  }
+
+
+@misc{WSER,
+    author = "{Environment and Climate Change Canada}",
+    title = {{Wastewater Systems Effluent Regulations}},
+    year = "2021",
+    howpublished = "\url{https://open.canada.ca/data/en/dataset/9e11e114-ef0d-4814-8d93-24af23716489}",
+    note = "[Online; accessed 29-December-2021]"
+  }
+
+@misc{MTWE,
+    author = "{Ontario Ministry of the Environment, Conservation and Parks}",
+    title = {{Municipal Treated Wastewater Effluent}},
+    year = "2021",
+    howpublished = "\url{https://data.ontario.ca/dataset/municipal-treated-wastewater-effluent}",
+    note = "[Online; accessed 29-December-2021]"
+  }
+
+@article{zhang2015tile,
+  title={Tile drainage phosphorus loss with long-term consistent cropping systems and fertilization},
+  author={Zhang, TQ and Tan, CS and Zheng, ZM and Drury, CF},
+  journal={Journal of environmental quality},
+  volume={44},
+  number={2},
+  pages={503--511},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{wang2018solid,
+  title={Solid cattle manure less prone to phosphorus loss in tile drainage water},
+  author={Wang, YT and Zhang, TQ and Tan, CS and Qi, ZM and Welacky, T},
+  journal={Journal of environmental quality},
+  volume={47},
+  number={2},
+  pages={318--325},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{tan2011surface,
+  title={Surface runoff and sub-surface drainage phosphorus losses under regular free drainage and controlled drainage with sub-irrigation systems in southern Ontario},
+  author={Tan, CS and Zhang, TQ},
+  journal={Canadian Journal of Soil Science},
+  volume={91},
+  number={3},
+  pages={349--359},
+  year={2011},
+  publisher={Agricultural Institute of Canada}
+}
+
+@article{sardans2013tree,
+  title={Tree growth changes with climate and forest type are associated with relative allocation of nutrients, especially phosphorus, to leaves and wood},
+  author={Sardans, Jordi and Pe{\~n}uelas, Josep},
+  journal={Global Ecology and Biogeography},
+  volume={22},
+  number={4},
+  pages={494--507},
+  year={2013},
+  publisher={Wiley Online Library}
+}
