Draft finished, redy for print

--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -228,7 +228,16 @@ In general terms, the process for phosphorus recovery and recycling can be class
 %\begin{table}[h]
 \begin{sidewaystable}[!htbp]
 	\centering
-	\caption{Phosphorus recovery techniques considered in the study. $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section ??.} \label{table:TechParam}
+	\caption{Phosphorus recovery techniques considered in the study. $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section 1.1. Refs: [1]: \protect\citet{martin2021geospatial},
+								 [2]: \protect\citet{jupp2021phosphorus},
+								 [3]: \protect\citet{egle_phosphorus_2016},
+								 [4]: \protect\citet{schoumans2010phosphorus},
+								 [5]: \protect\citet{szogi2008phosphorus},
+								 [6]: \protect\citet{Pearl2Kcost2},
+								 [7]: \protect\citet{zagklis2020assessing},
+								 [8]: \protect\citet{fernandez2022phosphorus},
+								 [9]: \protect\citet{ohtake2019phosphorus},
+								[10]: \protect\citet{sharma2021life}} \label{table:TechParam}
 	\resizebox{1.08\columnwidth}{!}{
 				\begin{threeparttable}
 		\begin{tabular}{@{}cccccccccc@{}}
@@ -279,9 +288,11 @@ In general terms, the process for phosphorus recovery and recycling can be class
 			&                                                                                                                                                         & Incineration                                                                     & 8                                      & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &     [3]     \\
 			&                                                                                                                                                         & Incineration                                                                     & 8                                      & RecoPhos                                                                                 & Mineral                                                                           & 87                                                                                    & 2.5                                  & 9                                                            &      [3]    \\
 			&                                                                                                                                                         & Incineration                                                                     & 8                                      & Thermophos                                                                               & P4                                                                                & 81                                                                                    & 2.7                                  & 9                                                            &    [3]      \\ \cmidrule(l){2-10}
-			& \multirow{8}{*}{\begin{tabular}[c]{@{}c@{}}Organic municipal\\ \& food waste\end{tabular}} & -                                                                               & -                                     & \begin{tabular}[c]{@{}c@{}}Chemical extraction and\\ Struvite precipitation\end{tabular} & Struvite                                                                          & 94                                                                                    & 24.8                                 & 3  &  [8]        \\                                              & & Incineration                                                                     & 6.43                                      & EcoPhos                                                                                  & Phosphoric acid                                                                   & 82                                                                                    & 4.5                                  & 6                                                            &   [3,9,10]       \\
-			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & AshDec depollution                                                                       & Calcium phosphate                                                                 & 86                                                                                    & 1.8                                  & 6                                                            &    [3,9,10]      \\
-			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & AshDec Rhenania                                                                          & Calcium phosphate                                                                 & 86                                                                                    & 1.9                                  & 6                                                            &    [3,9,10]      \\
+			& \multirow{5}{*}{\begin{tabular}[c]{@{}c@{}}Organic municipal\\ \& food waste\end{tabular}}
+%			& -                                                                               & -                                     & \begin{tabular}[c]{@{}c@{}}Chemical extraction and\\ Struvite precipitation\end{tabular} & Struvite                                                                          & 94                                                                                    & 24.8                                 & 3  &  [8]        \\                                              & & Incineration                                                                     & 6.43                                      & EcoPhos                                                                                  & Phosphoric acid                                                                   & 82                                                                                    & 4.5                                  & 6                                                            &   [3,9,10]       \\
+%			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & AshDec depollution                                                                       & Calcium phosphate                                                                 & 86                                                                                    & 1.8                                  & 6                                                            &    [3,9,10]      \\
+%			&
+			                                                                                                                                                         & Incineration                                                                     & 6.43                                      & AshDec Rhenania                                                                          & Calcium phosphate                                                                 & 86                                                                                    & 1.9                                  & 6                                                            &    [3,9,10]      \\
 			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & PASCH                                                                                    & Calcium phosphate                                                                 & 79                                                                                    & 4.7                                  & 6                                                            &     [3,9,10]     \\
 			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &      [3,9,10]    \\
 			&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & RecoPhos                                                                                 & Mineral                                                                           & 87                                                                                    & 2.5                                  & 9                                                            &     [3,9,10]     \\
@@ -293,19 +304,19 @@ In general terms, the process for phosphorus recovery and recycling can be class
 			\bottomrule
 %			\cmidrule(l){3-10} 
 		\end{tabular}
-					\begin{tablenotes}
-						\footnotesize
-						\item 1: \citet{martin2021geospatial}
-						\item 2: \citet{jupp2021phosphorus}
-						\item 3: \citet{egle_phosphorus_2016}
-						\item 4: \citet{schoumans2010phosphorus}
-						\item 5: \citet{szogi2008phosphorus}
-						\item 6: \citet{Pearl2Kcost2}
-						\item 7: \citet{zagklis2020assessing}
-						\item 8: \citet{fernandez2022phosphorus}
-						\item 9: \citet{ohtake2019phosphorus}
-						\item 10: \citet{sharma2021life}
-					\end{tablenotes}
+%					\begin{tablenotes}
+%						\footnotesize
+%						\item 1: \citet{martin2021geospatial}
+%						\item 2: \citet{jupp2021phosphorus}
+%						\item 3: \citet{egle_phosphorus_2016}
+%						\item 4: \citet{schoumans2010phosphorus}
+%						\item 5: \citet{szogi2008phosphorus}
+%						\item 6: \citet{Pearl2Kcost2}
+%						\item 7: \citet{zagklis2020assessing}
+%						\item 8: \citet{fernandez2022phosphorus}
+%						\item 9: \citet{ohtake2019phosphorus}
+%						\item 10: \citet{sharma2021life}
+%					\end{tablenotes}
 			\end{threeparttable}
 	}
 \end{sidewaystable}
@@ -432,12 +443,15 @@ Phosphorus is divided between the liquid and solid fractions of manure, being th
 \subsubsection{Industrial and urban sector}
 Industrial and urban sectors are grouped since some flows belong to both sectors, particularly those related with wastewater, and the organic fraction of industrial and municipal solid waste, including food waste.
 
-Slaughterhouse waste is an industrial flow from which phosphorus can be effectively recovered \citep{Pearl2Kcost2}. Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale on the cost of phosphorus recovery  and, therefore, average slaughterhouse capacities are considered, which values are 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered/$\left(\text{facility} \cdot \text{year}\right) $ respectively \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}. Considering the inventory of slaughtered animals reported by \citet{SlaughterFederalRedMeat, SlaughterFederalPoultry}, 7, 6, and 17 cattle, hog, and poultry slaughtering facilities are obtained, with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible due to the low number of animals slaughtered. Figure \ref{fig:Results_PlotSummary} shows that most of phosphorus can be recovered from the solid fraction of waste due to its larger phosphorus content. The variations between the minimum cost and maximum recovery scenarios are not significant for the solid slaughterhouse waste flow, however, for the liquid fraction the phosphorus recovery the difference between these two scenarios increase by a factor of 2.3, while the total recovery cost in the maximum recovery scenario increases by a factor of 3.3 times larger, as shown in Figure \ref{fig:Results_PlotSummarySpecific}, showing that the increase of phosphorus recovery efficiency results in a non-linear increase in the phosphorus recovery cost. {\color{red}{The numerical results are collected in the Supplementary Material ?}}
+Slaughterhouse waste is an industrial flow from which phosphorus can be effectively recovered \citep{Pearl2Kcost2}. Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale on the cost of phosphorus recovery  and, therefore, average slaughterhouse capacities are considered, which values are 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered/$\left(\text{facility} \cdot \text{year}\right) $ respectively \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}. Considering the inventory of slaughtered animals reported by \citet{SlaughterFederalRedMeat, SlaughterFederalPoultry}, 7, 6, and 17 cattle, hog, and poultry slaughtering facilities are obtained, with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible due to the low number of animals slaughtered. Figure \ref{fig:Results_PlotSummary} shows that most of phosphorus can be recovered from the solid fraction of waste due to its larger phosphorus content. The variations between the minimum cost and maximum recovery scenarios are not significant for the solid slaughterhouse waste flow, however, for the liquid fraction the phosphorus recovery the difference between these two scenarios increase by a factor of 2.3, while the total recovery cost in the maximum recovery scenario increases by a factor of 3.3 times larger, as shown in Figure \ref{fig:Results_PlotSummarySpecific}, showing that the increase of phosphorus recovery efficiency results in a non-linear increase in the phosphorus recovery cost. {\color{red}{The numerical results are collected in the Supplementary Material}}
 %The number of slaughtered animals can be found in Table ?? of Supplementary Material.
 
 %\subsubsection{Urban sector}
 Wastewater is a large flow containing significant amounts of phosphorus. Wastewater is colledted and directed to wastewater treatment plants (WWTPs). These facilities produces a liquid water effluent with adequate environmental parameters for its being releas into the environment, and a sludge flow from the primary and second treatments. Phosphorus can be recovered from both flows, although most of the phosphorus is contained in the sludge fraction.
-The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which is in alignment with the distribution values reported by \citep{egle_phosphorus_2016}. The capacity of the wastewater treatment plants installed in Ontario, together with their phosphorus flows, have been considered to determine the effect of the economies of scale in the cost of phosphorus recovery. {\color{red}{Data on Ontario wastewater treament plants capacity and phosphorus releases is collected in the Supplementary Material}} {\color{red}{*Jorge and Roy, would you agree with including this data as part of the Suplementary Material?*}}. Figure \ref{fig:Results_PlotSummary} shows that the potential for phosphorus recovery from sludge is greater than from the WWTPs liquid fraction, as mentioned before. Little variation is observed between the minum cost and maximum recovery scenarios for the recovery of phosphorus from sledge, which implies that there exist a certain degree of homogeneity in the current technologies for phosphorus recovery from sludge, which can be appreciated in Figure \ref{fig:Results_PlotSummarySpecific}. It must be noted that the phosphorus recovery systems from sludge ashes reveal to be more effective, including the incineration cost, than the direct recovery of phosphorus from sludge due to the higher recovery efficiency of the former ones. Conversely, the phosphorus recovery from the liquid wastewater fraction show a larger variability between both scenarios considered. The phosphorus recovered in the maximum recovery scenario is 1.7 times larger than in the minimum cost scenarios. However, this increase in the phosphorus recovery efficiency result in the increase of the recovery cost by a factor of 9.6, showing that similarly to the case of the liquid fraction of slaughterhouse waste, the achievement of greater recovery efficiencies through the use of more effective technologies result in an exponential increase of recovery costs.
+The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which is in alignment with the distribution values reported by \citep{egle_phosphorus_2016}. The capacity of the wastewater treatment plants installed in Ontario, together with their phosphorus flows, have been considered to determine the effect of the economies of scale in the cost of phosphorus recovery.
+%{\color{red}{Data on Ontario wastewater treatment plants capacity and phosphorus releases is collected in the Supplementary Material}}
+%{\color{red}{*Jorge and Roy, would you agree with including this data as part of the Suplementary Material?*}}.
+Figure \ref{fig:Results_PlotSummary} shows that the potential for phosphorus recovery from sludge is greater than from the WWTPs liquid fraction, as mentioned before. Little variation is observed between the minum cost and maximum recovery scenarios for the recovery of phosphorus from sledge, which implies that there exist a certain degree of homogeneity in the current technologies for phosphorus recovery from sludge, which can be appreciated in Figure \ref{fig:Results_PlotSummarySpecific}. It must be noted that the phosphorus recovery systems from sludge ashes reveal to be more effective, including the incineration cost, than the direct recovery of phosphorus from sludge due to the higher recovery efficiency of the former ones. Conversely, the phosphorus recovery from the liquid wastewater fraction show a larger variability between both scenarios considered. The phosphorus recovered in the maximum recovery scenario is 1.7 times larger than in the minimum cost scenarios. However, this increase in the phosphorus recovery efficiency result in the increase of the recovery cost by a factor of 9.6, showing that similarly to the case of the liquid fraction of slaughterhouse waste, the achievement of greater recovery efficiencies through the use of more effective technologies result in an exponential increase of recovery costs.
 
 Figure \ref{fig:Results_PlotSummary} shows that the food and organic waste represent the largest potential for phosphorus recovery. However, it must be noted that this flow includes all those streams comprised by solid organic wastes other than slaughterhouse waste, including food processing industry waste, household food waste, and other municipal organic waste. Similarly to other solid fractions, the minimum cost and maximum recovery scenario shows a narrrow variability regarding phosphorus recovered and recovery costs.
 
@@ -451,19 +465,23 @@ the temporal evolution of prices for different phosphorus commodities reported b
 
 It can be observed that the average cost of phosphorus recovery in Ontario, valued around 36 EUR/kg of phosphorus recovered, is significantly lower than the economic losses derived from the release of phosphorus into the environment, estimated at 74.5 EUR/kg P in the context of state of Wisconsin, U.S. This provides an economical support to the recovery of phosphorus, since high long-term costs derived from the social and environmental damages caused by phosphorus releases into the environment could be avoided through the recovery of phosphorus from waste streams. Nevertheless, it can be observed that the cost of phosphorus obtained from recovery processes is more costly than phosphorus in commercial fertilizers obtained from mining, which reduces the economic incentives for the recovery and uses of phosphorus, and further support in form of environmental and/or agricultural regulations, phosphorus recovery incentives, or sustainability arguments are needed in order to promote the recovery and recycling of phosphorus.
 
+Additionally, Figure \ref{fig:CommodityPrices} shows that average cost of phosphorus recovery within the province is around 36 EUR/kg of phosphorus recovered, however, in Figure \ref{fig:Results_PlotSummarySpecific} we can observe that phosphorus recovery costs can reach significantly higher values, particularly for the recovery of phosphorus from manure due to the lack of economies of scale in Ontario's CAFOs. Therefore, regional cooperative strategies can be implemented to develop a coordinated action against nutrient pollution, distributing the benefits and costs of phosphorus recovery, and prioritizing the total utility rather than the utility of each stakeholder, similarly to the cooperative approaches proposed for minimizing the cost of reducing greenhouse gases emissions from electricity generation \citep{galan2018time}.
+
 \begin{figure}[H]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
-	\includegraphics[width=1\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/CommodityPrices.pdf} 
+	\includegraphics[width=0.65\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/CommodityPrices.pdf} 
 	\caption{Average phosphorus recovery cost in Ontario, economical losses derived from the releases of phosphorus into the environment \protect\citep{sampat2021valuing}, and temporal evolution of prices for different phosphorus commodities. Note that the scale of y-axis is different for top and bottom axes.}
 	\label{fig:CommodityPrices}
 \end{figure}
 
-Additionally, Figure \ref{fig:CommodityPrices} shows that average cost of phosphorus recovery within the province is around 36 EUR/kg of phosphorus recovered, however, in Figure \ref{fig:Results_PlotSummarySpecific} we can observe that phosphorus recovery costs can reach significantly higher values, particularly for the recovery of phosphorus from manure due to the lack of economies of scale in Ontario's CAFOs. Therefore, regional cooperative strategies can be implemented to develop a coordinated action against nutrient pollution, distributing the benefits and costs of phosphorus recovery, and prioritizing the total utility rather than the utility of each stakeholder, similarly to the cooperative approaches proposed for minimizing the cost of reducing greenhouse gases emissions from electricity generation \citep{galan2018time}.
-
 \subsection{Potential for phosphorus recycling in Ontario}
 %The scope of this study is oriented to the recycling of the phosphorus recovered and, therefore, the processes studied are those recovering phosphorus in an adequate for being further reused. 
-Phosphorus recovered can be further recycled within the food production systems, developing a circular economy around the use of phosphorus. The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered, as shown in Figure \ref{fig:PSubstitution}, is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector depicted in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
+Phosphorus recovered can be further recycled within the food production systems, developing a circular economy around the use of phosphorus. Phosphorus recovery and recycling would result in curbing the depletion of phosphorus rock reserves and reduce the dependency on phosphorus supply from other regions.
+%, which in turn increase the resiliency of the regional food production system, and minimize the environmental footprint of fertilizers production.
+Considering these factors, there exist some governmental initiatives that, through the creation of different forums and platforms, aim to promote the recovery and recycling of phosphorus \citep{NRRPlatform, PFlows_Ontario}. In addition, the European Union is setting specific targets to reduce the use of non-renewable materials in fertilizer production \citep{EurpeanComissionNewFertilizersGoal} and to promote the use of waste-based fertilizers \citep{EurpeanComissionFertilizersRegulation}, encouraging the effective recovery and recycling of phosphorus, and they could serve as a guideline to support phosphorus recovery in other regions. 
+
+The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered, as shown in Figure \ref{fig:PSubstitution}, is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector depicted in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
 
 \begin{figure}[H]
 	\centering
