--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1020,6 +1020,15 @@ chapter = {6},
     note = "[Online; accessed 13-July-2022]"
     }
 
+@misc{NRRPlatform,
+    author = {{IISD}},
+    title = {{Nutrient Recovery and Reuse in Canada: Foundations for a national framework}},
+    institution  = {{IISD}},
+    year = {2018},
+    howpublished = "\url{https://www.iisd.org/sites/default/files/meterial/nutrient-recovery-reuse-canada.pdf}",
+    note = "[Online; accessed 25-August-2022]"
+    }
+
 @misc{WorldIntegratedTradeSolution,
     author = {{World Integrated Trade Solution}},
     title = {{Data on Export, Import, Tariff}},
@@ -1588,3 +1597,21 @@ chapter = {6},
   year={2013},
   publisher={Wiley Online Library}
 }
+
+@misc{EurpeanComissionNewFertilizersGoal,
+    author = {{European Comission}},
+    title = {{Circular Economy: Agreement on Commission proposal to boost the use of organic and waste-based fertilisers}},
+    institution  = {{European Comission}},
+    year = {2018},
+    howpublished = "\url{https://ec.europa.eu/commission/presscorner/detail/en/IP_18_6161}",
+    note = "[Online; accessed 25-August-2022]"
+    }
+
+@misc{EurpeanComissionFertilizersRegulation,
+    author = {{European Comission}},
+    title = {{Consolidated text: Regulation (EU) 2019/1009 of the European Parliament and of the Council of 5 June 2019 laying down rules on the making available on the market of EU fertilising products and amending Regulations (EC) No 1069/2009 and (EC) No 1107/2009 and repealing Regulation (EC) No 2003/2003 (Text with EEA relevance)Text with EEA relevance}},
+    institution  = {{European Comission}},
+    year = {2022},
+    howpublished = "\url{https://eur-lex.europa.eu/eli/reg/2019/1009}",
+    note = "[Online; accessed 25-August-2022]"
+    }
